# homework_3_git_advanced

./: README.md  pyproject.toml  requirements.txt
src/: .flake8  masks.py  processing.py  widget.py
tests/: conftest.py  test_funcs.py  tests.py
