[project]
name = "homework-3-git-advanced"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrey Gorlov",email = "andgor86@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
